src/objects/Mobile_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Entered Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exited Region</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Beacon_Identifier__c</fullName>
        <formula>Beacon__r.Identifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beacon Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beacon__c</fullName>
        <label>Beacon</label>
        <referenceTo>Beacon__c</referenceTo>
        <relationshipLabel>Mobile Activities</relationshipLabel>
        <relationshipName>Mobile_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <label>ContactId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mobile Activities</relationshipLabel>
        <relationshipName>Mobile_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Mobile Activity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Mobile Activity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobile Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>